made post items positions more accurate in blogs list and search page on desktop view

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -584,7 +584,7 @@ header {
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     width: 45%;
     height: auto;
-    margin: 20px !important;
+    margin: 20px auto !important;
 }
 
 .blog-post:hover {
