--- a/_includes/algolia_search.html
+++ b/_includes/algolia_search.html
@@ -10,12 +10,12 @@
     margin-bottom: 15px;
 }
 
-.ais-hits__empty{
-   margin-left: 25%;
- }
-
 .ais-hits--item{
-    float:left;
+  width: 100%;
+  float: left;
+ }
+ .ais-hits__empty{
+   margin-left: 25%;
  }
  #search-container{
      width: 100%;
