--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,8 +13,8 @@ layout: default
       <img class="author-profile-img" src="/assets/img/profile.png" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
-      {% if site.github_username %} {%- include github_follow_button.html -%} {%
-      endif %} {%- include github_star_button.html -%}
+         {%- include github_star_button.html -%}
+         {%- include github_fork_button.html -%}
     </div>
     <div class="col-lg-8 offset-md-2">
       <section id="recent-articles">
