--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -105,6 +105,9 @@ html[data-theme="light"] {
     padding: 0;
 }
 
+ol, ul {
+    margin-left: 30px !important;
+}
 
 /* Progress bar */
 .my-class .bar {
