--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -131,6 +131,10 @@ body {
     overflow-y:scroll;
 }
 
+.reactions-view {
+    color: var(--bold-color) !important;
+}
+
 .col-lg-12{
     padding-left: 0px !important;
     padding-top: 20px !important;
