Commit default appearance

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -350,7 +350,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url('https://images.pexels.com/photos/1037992/pexels-photo-1037992.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
+    background-image: url('https://lh3.googleusercontent.com/UFD2wId3dVKoKYK2hgpa-LI94jN0dIwYaXAmfFzUl9gFDMZORyx7wCcgpxPvpZsuBLpsf3Se2DnrP0xtrzi45698ZYClRaFeY_gSjkEsZvnPlZ6FDk8btzcXVdJHuR_WIcFA2v2GLRDFpOjVqgzgnkXkzXcV6YtSvY9NZC6VvFzyuLTxl5mh6IdqgUmYFzLL2rGJA6hjMfX3r7EwF98QxAklIsNw6kjpxXBbUoftrugcAEZFg6WBYQt8OBW77YZejcRdPx9jr1TPjVvT92qT028Ukg9L4R8b6Ad__HNkBfkse8Qlzd-e8W6HdGSr8-ta3IJAC5wlwFpec5HADoq71Jsxi5LW_e_VovCMSOM5dEfizkT0eshlUOAX-JnZ13FvrukkC8ZuU--t8W2StY2419Hyrs_cTq-9746pxlzky-dcrLGizAWHW8uKM1wI9E5OED2Y4M_GtKeICY3NOsy0Q5MnBlNdHXaOSKqCF7V__IvWf2QqRQjQQav8anULCLia34U4o_m8HcStQBIbMigAxGOjiaB7698UdN3c6t-t5d-jelFCDwZLkqCl0LbBsakvdsArP6QNGmgiEFMqaBku7KKEMz1vXzlyA8FCtCmOBUYzxhj3wnTpjCPwiLQCt-zHiNnmLoaj1hVsr3_WXGlJAluEv97LwfW_8bjfR_ppHFaxle9ycJgVQCfTCrE2=w1152-h648-no?authuser=2');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
