--- a/_includes/github_fork_button.html
+++ b/_includes/github_fork_button.html
@@ -1,1 +1,1 @@
-<a class="github-button" href="https://github.com/sujaykundu777/devlopr-jekyll/fork" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Fork sujaykundu777/devlopr-jekyll on GitHub">Fork</a>
+<a class="github-button" href="https://github.com/cringerlabs/lab-iac/fork" data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large" data-show-count="true" aria-label="Fork CringerLabs/lab-iac on GitHub">Fork</a>
