--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,14 +8,19 @@ layout: default
       actions: [{ type: "{{site.typewrite-text}}" }]
     });
   });
+//  <div class="jumbotron" style="text-align: center;">
+//      <img class="author-profile-img" src="/assets/img/profile.png" />
+//      <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+//      <p class="lead" id="typewriteText"></p>
+//         {%- include github_star_button.html -%}
+//         {%- include github_fork_button.html -%}
+//    </div>
 </script>
     <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="/assets/img/profile.png" />
-      <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
-      <p class="lead" id="typewriteText"></p>
-         {%- include github_star_button.html -%}
-         {%- include github_fork_button.html -%}
     </div>
+    <div class="lead" style="text-align: center;">
+      <p id="typewriteText" style="color: #3cff00" ></p>
+    </div> 
     <div class="col-lg-8 offset-md-2">
       <section id="recent-articles">
         <div id="recent-articles-header">
@@ -35,9 +40,9 @@ layout: default
               <div id="article-container">
                 <div id="article-img">
                   <img
-                    src="/assets/img/{{site.author_logo}}"
-                    width="50px"
-                    height="50px"
+                    src="{{post.thumbnail}}"
+                    width="90px"
+                    height="90px"
                   />
                 </div>
                 <div id="article-link">
