--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,9 @@
           >
             <span class="icono-hamburger" id="navbar-hamburger"> </span>
           </button>
-          <a class="navbar-brand" href="/">{{site.title}}</a>
+          <a class="navbar-brand" href="/">
+            <img class="navbar-brand-img" alt="CringerLabs" src="/assets/img/cg_logo.png">            
+          </a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               {% for i in site.urls %}
