Configure my Domain properties

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
     title="RSS"
     href="/feed.xml"
   />
+  <meta name="google-site-verification" content="hvQ4kyAq2Ij8u_heAx1lNIlEvrtvvvAnPKiAGfiD3dc" />
   <meta content="{{ site.share.fb_appid }}" property="fb:app_id" />
   <meta content="{{ site.title }}" property="og:site_name" />
   {% if page.noindex %}
