--- a/_includes/head.html
+++ b/_includes/head.html
@@ -82,16 +82,12 @@
     rel="stylesheet"
     href="{{site.url}}{{site.baseurl}}/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"
   />
-  <link
-    rel="stylesheet"
-    href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css"
-  />
+  -->
   <link
     rel="stylesheet"
     type="text/css"
     href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css"
   />
-  -->
   <link
     rel="stylesheet"
     type="text/css"
@@ -137,9 +133,8 @@
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/nanobar/nanobar.min.js"></script>
   <script src="{{site.url}}{{site.baseurl}}/assets/bower_components/typewrite/dist/typewrite.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script> -->
+  -- <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-  <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script> -->
 
   <!-- Github Button -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
