--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,14 +26,10 @@
             </ul>
           </div>
           <ul class="nav justify-content-end">
-
             <li class="nav-item">
-              <a
-                class="nav-link"
-                id="search-icon"
-                href="{{ site.url}}{{site.baseurl}}/search#/"
-                ><i class="fa fa-search" aria-hidden="true"></i
-              ></a>
+              <a class="nav-link toggle-search-button" href="#search">
+                <i class="fa fa-search search-icon" aria-hidden="true"></i>
+              </a>
             </li>
             <li class="nav-item" style="margin-top:5px; padding-right:20px;" >
                 <a class="header__checkout snipcart-checkout">
@@ -58,3 +54,28 @@
             </li>
           </ul>
         </nav>
+
+        <!-- Search Form -->
+        <div class="search-form-container">
+
+          <form class="search-form">
+            <fieldset class="search-form__fieldset">
+              <div class="row">
+                <div class="col-lg-8 offset-md-2">
+                  <input class="search-form__field" placeholder="Type to Search..." autofocus>
+                  <input class="search-form__submit" type="submit" value="search">
+                </div>
+              </div>
+            </fieldset>
+          </form>
+
+          <div class="row">
+            <div class="col-lg-8 offset-md-2 search-results">
+              <div class="card search-results"></div>
+            </div>
+          </div>
+
+          <div class="close-search-button search-form-container__close">
+              <i class="fa fa-times icon"></i>
+          </div>
+        </div>
