--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   });
 </script>
     <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="/assets/img/profile.png" />
+      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
@@ -35,7 +35,7 @@ layout: default
               <div id="article-container">
                 <div id="article-img">
                   <img
-                    src="/assets/img/{{site.author_logo}}"
+                    src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}"
                     width="50px"
                     height="50px"
                   />
