fixed cors issue

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -137,7 +137,7 @@
       TeX: { equationNumbers: { autoNumber: "AMS" } }
       });
    </script>
-   <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+   <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
   {% endif %}
 
   <!-- Github Button -->
