--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
   });
 </script>
     <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
+      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.jpeg" />
       <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
       <p class="lead" id="typewriteText"></p>
     </div>
