changing jumbotron and switching theme

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,7 @@
               src="/assets/img/cg_logo.png"
               width="250px"
               height="38px"
+              
             >            
           </a>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,15 +51,17 @@
                 <i class="fa fa-search search-icon" aria-hidden="true"></i>
               </a>
             </li>
+            
             <li class="nav-item">
               <input
                 class="nav-link switch"
                 id="theme-toggle"
-                onclick="modeSwitcher() "
+                onclick="modeSwitcher(dark)"
                 type="checkbox"
                 name="checkbox"
               />
             </li>
+            
           </ul>
         </nav>
 
