--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -495,7 +495,7 @@ header {
 /* jumbotron */
 .jumbotron {
     background-color: var(--main-background-color) !important;
-    background-image: url('https://cringerlabs.com/assets/img/cg.png?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
+    background-image: url('http://sf.co.ua/14/02/wallpaper-1205221.jpg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
