changing jumbotron and switching theme

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -56,7 +56,7 @@
               <input
                 class="nav-link switch"
                 id="theme-toggle"
-                onclick="modeSwitcher(dark)"
+                onclick="modeSwitcher()"
                 type="checkbox"
                 name="checkbox"
               />
