changing jumbotron and switching theme

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -527,7 +527,7 @@ header {
 .lead {
     font-size: 1.30rem !important;
     font-weight: 600;
-    color: #111 !important;
+    color: #3cff00 !important;
 }
 
 .fa {
