Adding category files

--- a/_includes/author_certifications.html
+++ b/_includes/author_certifications.html
@@ -4,7 +4,7 @@
 <p> RHCVA - Red Hat Certified Virtualization Administrator</p>
 <p> RHCE - Red Hat Certified Engineer</p>
 <p> RHCSA - Red Hat Certified System Administrator</p>
-<p> LPIC-3 - Linux Enterprise Professional Security (303))</p>
+<p> LPIC-3 - Linux Enterprise Professional Security (303)</p>
 <p> LPIC-2 - Linux Engineer</p>
 <p> LPIC-1 - Linux Administrator</p>
 <p> VMware Certified Associate - Data Center Virtualization</p>
