--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -333,13 +333,13 @@ header {
         position: absolute;
         top: 10%;
         width: 100%;
-        color: #f69801;
+        color: #3cff00;
         background: rgba(0, 0, 0, 0);
         font-size: 30px;
         font-weight: 300;
         text-align: center;
         border: 0px;
-        border-bottom: 1px dashed #ffa000;
+        border-bottom: 1px dashed #3cff00;
         margin: 0px auto;
         margin-top: -51px;
         padding-left: 30px;
@@ -348,7 +348,7 @@ header {
 
       &:focus {
         border: 0;
-        border-bottom: 1px dashed #ffa000;
+        border-bottom: 1px dashed #3cff00;
       }
     }
 
