--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,3 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> Java, Python, Kotlin </p>
+<p> HTML , CSS , Javascript </p>
+<p> Oracle, Spring, Oz </p>
