--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -5,5 +5,7 @@
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
+    <embed src="https://wakatime.com/share/@a6a886a0-27d9-492b-9761-239e0a9f1aa6/90576659-9291-48b9-9383-93f725567d1c.svg"></embed>
 </figure>
+
+
