--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,7 +1,7 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
+<figure><embed src="https://wakatime.com/share/@a6a886a0-27d9-492b-9761-239e0a9f1aa6/d612baec-9d43-444e-8ec1-69a85170bfff.svg"></embed></figure>
 
 <!-- Hours Coded -->
 <figure>
