--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -4,7 +4,7 @@ layout: default
 <div class="card">
         <div class="col-md-8 offset-md-2 offset-md-right">
                 <h1>Author : {{ page.name }}</h1>
-                <img src="{{site.url}}{{site.baseurl}}/assets/img/authors/{{ page.avatar}}" class="author-profile-img" />
+                <img src="https://yoonsik0926.github.io/assets/img/profile.jpg" class="author-profile-img" />
                 <p>{{ page.bio }}</p>
 
                 <h2>Post by this author</h2>
