--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,9 +9,9 @@ layout: default
     });
   });
 </script>
-    <div class="jumbotron" style="text-align: center;">
-      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/profile.png" />
-      <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+    <div class="jumbotron" style="text-align: center; background-image:url(/assetts/img/main_code.jpg); background-size:cover; ">
+      <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/main_ys.png" />
+      <p class="jumbotron-heading">Hi, I am {{site.author}}</p>
       <p class="lead" id="typewriteText"></p>
          {%- include github_star_button.html -%}
          {%- include github_fork_button.html -%}
