--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p> Powered by<a href="https://github.com/sujaykundu777/devlopr-jekyll"> devlopr jekyll</a>.Hosted at <a href="https://pages.github.com">Github</a>. Subscribe via
+    <p> Powered by<a href="https://github.com/yoonsik0926/yoonsik0926.github.io"> devlopr jekyll</a>.Hosted at <a href="https://pages.github.com">Github</a>. Subscribe via
         <a href="{{ " /feed.xml " | prepend: site.baseurl }}">RSS</a>
     </p>
 </footer>
