--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-
-<div class="row ">
-  <div class="col-lg-4 offset-md-1">
+<div class="col-lg-12 offset-md-2">
+<div class="row">
+  <div class="col-lg-4 ">
     <div class="card" id="profile-card">
       <a href="/">
         <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="profile-img" />
@@ -186,4 +186,5 @@ layout: default
     </div>
     {% endif %}
   </div>
+</div>
 </div>
