--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-
- <div class="row" id="blog-posts-container">
-      <div class="col-lg-8 offset-md-1">
+<div class="col-lg-12">
+ <div class="row justify-content-center">
+      <div class="col-lg-6">
               <ul>
                   <div class="row">
                       {% for post in paginator.posts %}
@@ -62,4 +62,4 @@ layout: default
     {%- include blog_sidebar.html -%}
 
  </div>
-
+</div>
