--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,15 +1,17 @@
 ---
 layout: default
 ---
-
-
-<div class="row">
-    <div class="col-lg-6 offset-md-3">
-        <div class="card">
+</div>
+<div class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-10 m10">
+            <div class="card">
                 <h1 class="card-title"> Contact Me </h1>
-                 {%- include contact_me_form.html -%}
-             </div>
+                {%- include contact_me_form.html -%}
+            </div>
+        </div>
     </div>
 </div>
+
 
 
