--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
 {%- include head.html -%}
 <body>
         {%- include header.html -%}
-        <div class="container-fluid">
+        <div class="container">
             {{ content }}
         </div>
          <div class="col-lg-12" id="newsletter_footer">
