--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="col-lg-12 offset-md-2">
+<div class="col-lg-12">
 <div class="row">
   <div class="col-lg-4 ">
     <div class="card" id="profile-card">
