--- a/_includes/head.html
+++ b/_includes/head.html
@@ -182,7 +182,23 @@
     data-x_margin="10"
     data-y_margin="10"
   ></script>
-
+ <!-- olvy releases -->
+ <script>
+    var OlvyConfig = {
+      organisation: "devlopr",
+      target: "#olvy-target",
+      type: "modal",
+      view: {
+        showSearch: false,
+        compact: false,
+        showHeader: true, // only applies when widget type is embed. you cannot hide header for modal and sidebar widgets
+        showUnreadIndicator: true,
+        unreadIndicatorColor: "#EE6E19FF",
+        unreadIndicatorPosition: "top-right"
+      }
+    };
+  </script>
+  <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
   <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
