--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,25 @@
                 >
               </li>
               {% endfor %}
+
             </ul>
           </div>
           <ul class="nav justify-content-end">
+              <li class="nav-item">
+                <a class="nav-link" href="{{site.url}}{{site.baseurl}}/get-started">
+                   Get Started
+                </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" id="olvy-target">
+                      What's New
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{site.url}}{{site.baseurl}}/styleguide">
+                     Styleguide
+                  </a>
+                </li>
             <li class="nav-item">
               <a class="nav-link toggle-search-button" href="#search">
                 <i class="fa fa-search search-icon" aria-hidden="true"></i>
