--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -152,7 +152,7 @@ pre {
 }
 
 .m10{
-    margin:10px;
+    margin:35px;
 }
 
 blockquote {
@@ -493,7 +493,7 @@ header {
     text-transform: none;
 }
 .snipcart-payment-methods__title {
-    background-color: black !important;
+    background-color:  var(--main-background-color) !important;
 }
 
 /* jumbotron */
