--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -6,8 +6,9 @@ layout: default
     <div class="row d-flex justify-content-center">
         <div class="col-10 m10">
             <div class="card">
-                <h1 class="card-title"> Contact Me </h1>
-                {%- include contact_me_form.html -%}
+                <h1 class="card-title"> Contact us </h1>
+                <!-- Replace with contact-getform or contact-formspree -->
+                    {%- include contact-getform.html -%}
             </div>
         </div>
     </div>
