--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,16 +32,19 @@
                    Get Started
                 </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                   <a class="nav-link" id="olvy-target">
                       What's New
                   </a>
-              </li>
+              </li> -->
               <li class="nav-item">
                   <a class="nav-link" href="{{site.url}}{{site.baseurl}}/styleguide">
                      Styleguide
                   </a>
                 </li>
+            <li class="nav-item">
+              <button id="olvy-target" class="btn btn-dark"> What's New </button>
+            </li>
             <li class="nav-item">
               <a class="nav-link toggle-search-button" href="#search">
                 <i class="fa fa-search search-icon" aria-hidden="true"></i>
