--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,5 +39,22 @@ layout: compress
       });
     }
   </script>
-</body>
+      <!-- olvy releases -->
+      <script>
+        var OlvyConfig = {
+          organisation: "devlopr",
+          target: "#olvy-target",
+          type: "modal",
+          view: {
+            showSearch: false,
+            compact: false,
+            showHeader: true, /* only applies when widget type is embed. you cannot hide header for modal and sidebar widgets */
+            showUnreadIndicator: true,
+            unreadIndicatorColor: "#EE6E19FF",
+            unreadIndicatorPosition: "top-right"
+          }
+        };
+      </script>
+      <script type="text/javascript" src="https://app.olvy.co/script.js" defer="defer"></script>
+  </body>
 </html>
