--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -42,7 +42,7 @@ layout: compress
       <!-- olvy releases -->
       <script>
         var OlvyConfig = {
-          organisation: "devlopr",
+          organisation: "{{site.olvy_organization}}",
           target: "#olvy-target",
           type: "modal",
           view: {
